<resources>
    <string name="app_name">金桔理财</string>
    <string name="about_jinju">关于金桔</string>
    <string name="company_introduce">公司介绍</string>
    <string name="dialog_tips">温馨提示</string>
    <string name="call">拨打</string>
    <string name="profile_contact_service">遇到问题？您可以联系客服</string>
    <string name="profile_service_phone">400-656-5516</string>
    <string name="profile_call_phone">4006565516</string>
    <string name="profile_service_time">服务时间09:00-20:00</string>
    <string name="confirm">确认</string>
    <string name="invest">立即投资</string>
    <string name="chargenum">充值金额</string>
    <string name="withdrawnum">提现金额</string>
    <string name="chargesuccess">恭喜！申请充值成功</string>
    <string name="yuan">元</string>
    <string name="discover_platform">平台数据</string>
    <string name="discover_media">媒体报道</string>
    <string name="discover_invite">邀请好友</string>
    <string name="discover_office">官方公告</string>
    <string name="discover_platform_msg">运营数据一目了然</string>
    <string name="discover_media_msg">我们一直在进步</string>
    <string name="discover_invite_msg">现金返不停</string>
    <string name="discover_office_msg">平台信息一触即达</string>
    <string name="financial_buy">立即购买</string>
    <string name="share">分享</string>
    <string name="submit">提交</string>
    <string name="modify">修改</string>
    <string name="cancel">取消</string>
    <string name="update">更新</string>
    <string name="jump">跳过</string>
    <string name="complete">完成</string>
    <string name="filter">筛选</string>
    <string name="free">免费</string>
    <string name="time">时间</string>
    <string name="try_again">重试</string>
    <string name="loading">正在加载</string>
    <string name="default_number">0</string>
    <string name="default_percent">0%</string>
    <string name="percent_unit">%</string>
    <string name="money_unit">元</string>
    <string name="hundred_unit">百</string>
    <string name="thousand_unit">千</string>
    <string name="ten_thousand_unit">万</string>
    <string name="million_money_unit">万元</string>
    <string name="copy_unit">份</string>
    <string name="people_unit">人</string>
    <string name="day_unit">天</string>
    <string name="member_self">自己</string>
    <string name="times_number">%d倍</string>
    <string name="people_number">%d人</string>
    <string name="money_number">%s元</string>
    <string name="million_money_number">%s万元</string>
    <string name="copy_number">%s份</string>
    <string name="day_number">%d天</string>
    <string name="month_number">%d个月</string>
    <string name="percent_number">%s%%</string>
    <string name="pay_fee_number">%s元/月</string>
    <string name="mana_fee_number">%s元/天</string>
    <string name="interest_number">%1$s元/%2$s分</string>
    <string name="month_rate_number">%s分/每月</string>
    <string name="day_rate_number">%s元/每天</string>
    <string name="date_between">%1$s至%2$s</string>
    <string name="date_no_over">长期有效</string>
    <string name="match_time">比赛时间：</string>
    <string name="no_limit">不限</string>
    <string name="enter_profile">进入个人中心</string>
    <string name="operate_success">操作成功</string>
    <string name="submit_verify">提交认证</string>
    <string name="get_code">获取</string>
    <string name="count_down">%d秒后重发</string>
    <string name="click_view">点击查看</string>
    <string name="phone_hint">手机号码</string>
    <string name="code_hint">请输入验证码</string>
    <string name="password">登录密码</string>
    <string name="withdraw_password">手机支付密码</string>
    <string name="set_withdraw_password">设置支付密码</string>
    <string name="modify_withdraw_password">修改手机支付密码</string>
    <string name="find_withdraw_password">找回手机支付密码</string>
    <string name="password_confirm_hint">确认密码</string>
    <string name="old_password_input_hint">输入原登录密码</string>
    <string name="new_password_set_hint">6&#8211;20位的数字、字母或符号</string>
    <string name="new_password_confirm_hint">重复新密码</string>
    <string name="old_withdraw_password_input_hint">请输入原手机支付密码，完成身份验证</string>
    <string name="new_withdraw_password_set_hint">请重新设置手机支付密码</string>
    <string name="new_withdraw_password_confirm_hint">请重复输入手机支付密码</string>
    <string name="find_password">找回密码</string>
    <string name="modify_password">修改登录密码</string>
    <string name="reset_password">重置密码</string>
    <string name="next_step">下一步</string>
    <string name="agree_and_accept">我同意并接受</string>
    <string name="image_capture">拍摄</string>
    <string name="photo_library">从相册选择</string>
    <string name="current_phone">当前手机号</string>
    <string name="save_setting">保存设置</string>
    <string name="share_other">分享到</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_wechat_moments">微信朋友圈</string>
    <string name="share_sina_weibo">新浪微博</string>
    <string name="share_completed">分享成功！</string>
    <string name="share_canceled">分享取消！</string>
    <string name="share_failed">分享失败！</string>
    <string name="share_title">金桔网</string>
    <string name="share_body">关注金桔网（www.miniu98.com），享高倍率股票融资，12%零风险理财，招行托管，安全放心。</string>
    <string name="operate_modify">修改</string>
    <string name="operate_find">找回</string>
    <string name="operate_set">设置</string>
    <string name="operate_upload">上传</string>
    <string name="register_title">注册</string>
    <string name="mobile_already_register">%s手机号已经注册</string>
    <string name="register_now">立即注册</string>
    <string name="register_recommend_hint">推荐人编码</string>
    <string name="register_protocol_title">金桔理财注册协议</string>
    <string name="register_protocol">《金桔理财注册协议》</string>
    <string name="register_success">注册成功！</string>
    <string name="guide_charge">账户充值</string>
    <string name="guide_charge_desc">资金实时到账</string>
    <string name="guide_loan">理财</string>
    <string name="guide_loan_desc">稳拿12%</string>
    <string name="guide_withfund">融资炒股</string>
    <string name="guide_withfund_desc">助您驰骋牛市</string>
    <string name="verify_name">持卡人认证</string>
    <string name="verify_name_success">恭喜您，实名认证成功！</string>
    <string name="verify_name_text">姓名</string>
    <string name="verify_card_text">身份证</string>
    <string name="verify_name_hint">请输入持卡人姓名</string>
    <string name="verify_card_hint">请输入持卡人身份证号</string>
    <string name="withdraw_card_hint">请输入身份证号</string>
    <string name="verify_name_notify">为保证账户和资金安全，请填写本人真实信息，认证后不可更改</string>
    <string name="verify_card">身份证上传</string>
    <string name="verify_card_front">身份证正面</string>
    <string name="verify_card_back">身份证背面</string>
    <string name="verify_card_group">手持身份证</string>
    <string name="verify_card_success">身份证信息已经提交！</string>
    <string name="verify_card_success_next">请耐心等待管理员的审核</string>
    <string name="verify_group_success">手持身份证信息已经提交！</string>
    <string name="verify_group_success_next">请耐心等待管理员的审核</string>
    <string name="login_now">立即登录</string>
    <string name="login_back">返回主页</string>
    <string name="login_account_hint">昵称／手机号／邮箱</string>
    <string name="login_password_hint">请输入登录密码</string>
    <string name="login_register">快速注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="main_home">首页</string>
    <string name="main_profile">我的金桔</string>
    <string name="main_withfund">融资炒股</string>
    <string name="main_loan">投资赚钱</string>
    <string name="profile_about">关于我们</string>
    <string name="profile_invite_make_money">邀请赚钱</string>
    <string name="profile_call_center">客服中心</string>
    <string name="profile_setting">设置</string>
    <string name="profile_info">个人信息</string>
    <string name="call_center_title">客服中心</string>
    <string name="call_center_contact_us">联系我们</string>
    <string name="call_center_help">帮助中心</string>
    <string name="call_center_feedback">意见反馈</string>
    <string name="call_common_problem">常见问题</string>
    <string name="opinion_feedback_submit">提交</string>
    <string name="opinion_feedback_input_limit">%d/300</string>
    <string name="opinion_feedback_hint">感谢您对金桔的关注，有什么想说的，尽管跟我们提，您的意见我们一定认真听～</string>
    <string name="contact_us_service_phone">客服电话</string>
    <string name="contact_us_service">客服服务</string>
    <string name="contact_us_more">更多动态</string>
    <string name="contact_us_service_time">服务时间</string>
    <string name="contact_us_time">09:00 - 20:00</string>
    <string name="contact_us_weChat">客服微信</string>
    <string name="contact_us_weChat_code">duoduolc8</string>
    <string name="contact_us_qq">客服QQ</string>
    <string name="contact_us_qq_group">QQ群号</string>
    <string name="contact_us_qq_code">3478866203</string>
    <string name="contact_us_qq_group_code">638745517</string>
    <string name="contact_us_official_accounts">微信公众号</string>
    <string name="contact_us_official_accounts_desc">金桔理财(duoduojr88)</string>
    <string name="contact_us_official_accounts_id">duoduojr88</string>
    <string name="contact_us_dialog_remind">请务必认准金桔理财%1$s，谨防诈骗！%2$s已复制到剪切板！</string>
    <string name="home_duoduo_handpick">金桔精选</string>
    <string name="home_notice_title">官方公告</string>
    <string name="home_notice_detail_title">公告</string>
    <string name="home_least_invest">%d元起购</string>
    <string name="home_deadline">期限%s</string>
    <string name="home_sold">%s</string>
    <string name="home_title">精品推荐</string>
    <string name="home_interest_bearing">当日计息</string>
    <string name="home_bank_depository">银行存管</string>
    <string name="home_project_transparent">项目透明</string>
    <string name="home_recommend">首页</string>
    <string name="home_withfund">融资炒股</string>
    <string name="home_withfund_desc">按月融资、按天融资、免费体验</string>
    <string name="home_loan">理财</string>
    <string name="home_discover">发现</string>
    <string name="home_loan_desc">最高年化收益12%，周期短、转让灵活</string>
    <string name="home_match">股票</string>
    <string name="home_match_desc">免费提供10,000元实盘炒股资金</string>
    <string name="home_download">交易软件下载</string>
    <string name="home_download_desc">恒生HOMS股票交易软件</string>
    <string name="home_login">立即登录</string>
    <string name="home_login_desc">立即登录金桔网</string>
    <string name="home_register">注册送红包</string>
    <string name="home_register_desc">活动期间注册就送20元红包</string>
    <string name="home_profile">我的金桔</string>
    <string name="home_profile_desc">我的投资管理、账号设置</string>
    <string name="home_union">推广赚钱</string>
    <string name="home_union_desc">推荐金桔，赚取红包</string>
    <string name="home_understand">了解金桔</string>
    <string name="home_understand_desc">你想了解的都在这</string>
    <string name="home_invite_friends">邀请好友</string>
    <string name="home_go_register">立即注册</string>
    <string name="home_register_give">注册立送</string>
    <string name="home_register_success">注册成功</string>
    <string name="home_welcome">欢迎加入金桔</string>
    <string name="home_buy_beginner_product">购买新手产品</string>
    <string name="home_more_welfare">更多福利</string>
    <string name="home_real_name">实名认证</string>
    <string name="home_real_name_desc">认证后才能购买产品哦</string>
    <string name="home_go_real_name">立即认证</string>
    <string name="home_go_buy">立即购买</string>
    <string name="setting_modify_phone">修改绑定手机</string>
    <string name="union_user_name">用户名</string>
    <string name="union_register_ip">访问IP</string>
    <string name="union_register_time">注册时间</string>
    <string name="withdraw_record_time">提款时间</string>
    <string name="withdraw_record_type">提款银行</string>
    <string name="withdraw_record_status">状态</string>
    <string name="withdraw_record_amount">金额</string>
    <string name="phone_number">手机号</string>
    <string name="phone_number_notify_hint">请输入手机号</string>
    <string name="back">返回</string>
    <string name="input_bound_phonenum">请输入绑定的手机号</string>
    <string name="charge_success_notify">温馨提示：预计银行扣款成功后5分钟内到账</string>
    <string name="charge_withdraw_consult">如有疑问请咨询客服电话：</string>
    <string name="charge_withdraw_phone">400-656-5516</string>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!\"£$%^*()~=#{}[];\':,./?/*-_+@&#060;&#062;&#064;&#038;</string>
</resources>