<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45.0dip"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <TextView
        style="@style/custom_orange_middle_text"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_weight="1.0"
        android:text="@string/withdraw_record_time" />

    <TextView
        style="@style/custom_orange_middle_text"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_weight="1.0"
        android:text="@string/withdraw_record_type" />

    <TextView
        style="@style/custom_orange_middle_text"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_weight="1.0"
        android:text="@string/withdraw_record_status" />

    <TextView
        style="@style/custom_orange_middle_text"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_weight="1.0"
        android:gravity="right"
        android:text="@string/withdraw_record_amount" />

</LinearLayout>