<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_title_bar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_charge_success" />

        <TextView
            style="@style/custom_word_black_middle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/chargesuccess" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/separator" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="@string/chargenum"
            android:textColor="@color/charge_content_txt"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@id/txt_charge_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/charge_top_red"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"
                android:textColor="@color/charge_content_txt"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@id/btn_confirm"
        style="@style/custom_white_big_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_withdraw_height"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/btn_red_solid_radius_bg"
        android:text="@string/invest" />

    <TextView
        style="@style/custom_word_gray_small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:singleLine="true"
        android:text="@string/charge_success_notify"
        android:textColor="@color/charge_content_time_txt"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_withdraw_consult"
            android:textColor="@color/charge_content_time_txt"
            android:textSize="12sp" />

        <TextView
            android:id="@id/txt_phone"
            style="@style/custom_main_blue_small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charge_withdraw_phone"
            android:textColor="@color/main_red" />
    </LinearLayout>


</LinearLayout>