<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/top_title_bar"/>
    <TextView
        style="@style/custom_word_black_middle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/icon_youzhi"
        android:layout_marginLeft="12dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/contact_us_service"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shape_corner_item"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btn_service_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
            <TextView
                style="@style/custom_word_black_middle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="@color/word_black"
                android:text="@string/contact_us_service_phone"/>
            <TextView
                android:id="@+id/txt_service_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/word_black_gray"
                android:drawableRight="@mipmap/icon_small_arrow"
                android:drawablePadding="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="right"
                android:layout_gravity="center_vertical"
                android:text="@string/profile_service_phone"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/separator"/>
        <LinearLayout
            android:id="@+id/btn_weChat"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <TextView
                style="@style/custom_word_black_middle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="@color/word_black"
                android:text="@string/contact_us_weChat"/>
            <TextView
                android:id="@+id/txt_weChat_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/word_black_gray"
                android:drawableRight="@mipmap/icon_small_arrow"
                android:drawablePadding="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="right"
                android:layout_gravity="center_vertical"
                android:text="@string/contact_us_weChat_code"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/separator"/>
        <LinearLayout
            android:id="@+id/btn_qq_code"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">
            <TextView
                style="@style/custom_word_black_middle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/contact_us_qq"/>
            <TextView
                android:id="@+id/txt_qq_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/word_black_gray"
                android:drawableRight="@mipmap/icon_small_arrow"
                android:drawablePadding="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="right"
                android:layout_gravity="center_vertical"
                android:text="@string/contact_us_qq_code"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        style="@style/custom_word_black_middle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/icon_youzhi"
        android:layout_marginLeft="12dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/contact_us_more"/>
    <LinearLayout
        android:id="@+id/btn_official_accounts"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shape_corner_item"
        android:orientation="horizontal">
        <TextView
            style="@style/custom_word_black_middle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/contact_us_official_accounts"/>
        <TextView
            android:id="@+id/txt_official_accounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/word_black_gray"
            android:drawableRight="@mipmap/icon_small_arrow"
            android:drawablePadding="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="right"
            android:layout_gravity="center_vertical"
            android:text="@string/contact_us_official_accounts_desc" />
    </LinearLayout>


</LinearLayout>