<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45.0dip"
        android:background="@color/main_red" >

        <Button
            android:id="@id/btn_back"
            style="@style/custom_word_black_big_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingLeft="10.0dp"
            android:paddingRight="10.0dp"
            android:text="@string/back"
            android:drawableLeft="@mipmap/icon_back_white"
            android:drawableStart="@mipmap/icon_back_white"
            android:textColor="@color/white"
            android:background="@android:color/transparent"/>

        <TextView
            style="@style/custom_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:text="@string/setting_modify_phone" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/separator"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45.0dip"
        android:gravity="center"
        android:orientation="horizontal" >
        <TextView
            android:text="@string/input_bound_phonenum"
            android:id="@id/txt_mobile"
            style="@style/custom_dark_gray_big_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/img_edit_white_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            style="@style/custom_dark_gray_middle_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="@dimen/edge_blank_width"
            android:layout_marginLeft="@dimen/edge_blank_width"
            android:text="@string/phone_number"/>

        <com.jinju.android.widget.WithClearEditText
            android:id="@id/edit_phone"
            style="@style/custom_gray_middle_edit"
            android:layout_width="0dip"
            android:layout_height="@dimen/edittext_height"
            android:layout_weight="10"
            android:layout_marginLeft="@dimen/edge_blank_width"
            android:background="@null"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:hint="@string/phone_number_notify_hint" />
    </LinearLayout>

    <TextView
        style="@style/custom_phonenum_notify_text"
        android:id="@id/txt_phone"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:visibility="gone"
        android:background="@color/phonenum_bgcolor"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/blank_view_normal_height"/>
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dip"
        android:id="@id/btn_next"
        style="@style/custom_white_big_button"
        android:background="@mipmap/btn_orange_solid_bg_wait"
        android:text="@string/next_step" />

</LinearLayout>